--- a/index.html
+++ b/index.html
@@ -16,5 +16,18 @@
 		<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
 		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-	</body>
+	<h2><strong>Benefícios</strong></h2>
+    <ul>
+    <li>atendimento aos clientes</li>
+    <li>espaço diferenciado</li>
+    <li>localizaçã</li>
+    <li>profissionais de qualidade</li>
+    
+    </ul>
+    
+
+
+
+
+    </body>
 </html>
