--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 	<h2><strong>Benefícios</strong></h2>
     <ul>
-    <li>atendimento aos clientes</li>
-    <li>espaço diferenciado</li>
-    <li>localizaçã</li>
-    <li>profissionais de qualidade</li>
+    <li class="itens">atendimento aos clientes</li>
+    <li class="itens">espaço diferenciado</li>
+    <li class="itens">localizaçã</li>
+    <li class="itens">profissionais de qualidade</li>
     
     </ul>
     
