--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 
 	<body>
+		<head>inicio</head>
 		<img id="banner" src="banner.jpg">
 
 		<h1>Sobre a Barbearia Alura</h1>
@@ -25,7 +26,7 @@
     
     </ul>
     
-
+<footer>fim</footer>
 
 
 
